# axum_v1

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.circleci/: config.yml
.github/: docker-tests.yaml
.github/workflows/: apisec-scan.yml  docker-tests.yaml  test-release-app.yaml
docker/: docker-compose.dev.yaml
migrations/2023-09-19-075118_create_users/: up.sql
requests/: auth.http
src/: main.rs  schema.rs
src/config/: mod.rs
src/lib/: auth.rs  jwt.rs
src/libs/: auth.rs
src/middlewares/: auth.rs  request.rs
src/models/: user.rs
src/repositories/: users.rs
src/routes/: auth.rs  common.rs  mod.rs  users.rs
tests/: auth.rs  healthcheck.rs  metrics.rs  users.rs
tests/common/: mod.rs
