[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bb8 = "0.8.3"
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tower = { version = "0.4.13", features = ["timeout"] }
anyhow = "1.0.81"
uuid = { version = "1.8.0", features = ["v4"] }
jsonwebtoken = "9.3.0"

[dev-dependencies]
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
